--- a/index2.html
+++ b/index2.html
@@ -21,158 +21,14 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="./assets/fa/css/all.min.css">
-
-    <style>
-        * {
-            font-family: 'Lato', sans-serif;
-        }
-
-        .carousel-caption .caption-title {
-            font-family: 'Lato', sans-serif;
-        }
-
-        .navnav .container .navbar-brand {
-            font-family: 'Raleway', sans-serif;
-            font-size: 15pt;
-        }
-
-        .rale {
-            font-family: 'Raleway', sans-serif;
-            font-size: 15pt;
-        }
-
-        .carousel-caption p {
-            font-size: 17pt;
-            font-family: 'Montserrat', sans-serif;
-        }
-
-        .carousel-item:after {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.5);
-        }
-
-        .navnav {
-            background-color: rgba(0, 0, 0, 0.7);
-        }
-
-        .navnav .container {
-            padding: 0.1%;
-        }
-
-        .navnav .navbar-brand {
-            color: white;
-            font-size: 20pt;
-        }
-
-        .navnav .container .collapse .navbar-nav li a {
-            color: white;
-            text-decoration: none;
-            font-size: 20pt;
-        }
-
-        .navnav .container .collapse .navbar-nav li a:hover {
-            color: rgba(255, 255, 255, 0.7);
-            transition: 1s;
-        }
-
-        .carousel-item {
-            position: relative;
-        }
-
-        .carousel-caption {
-            position: absolute;
-            top: 40%;
-        }
-
-        .btn-transparent {
-            border-radius: 0px;
-            border: 1px solid white;
-            background-color: transparent;
-            color: white;
-            padding: 20px;
-            font-size: 20pt;
-        }
-
-        .btn-transparent:hover {
-            background-color: white;
-            color: black;
-            transition: 1s;
-        }
-
-        .h-full {
-            height: 100vh;
-        }
-
-        .br {
-            border-right: 1px solid rgba(0, 0, 0, 0.2);
-        }
-
-        div.desc {
-            padding: 15px;
-            text-align: center;
-        }
-
-        .card {
-            background: #fff;
-            border-radius: 2px;
-            display: inline-block;
-            position: relative;
-            width: 300px;
-        }
-
-        .card-1 {
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-            transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-        }
-
-        .card-1:hover {
-            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-        }
-
-        .footer,
-        .footer h3 {
-            color: white;
-        }
-
-        .social-link {
-            text-decoration: none;
-            color: white;
-            margin: 5px;
-        }
-
-        .social-link:hover {
-            opacity: 0.9;
-        }
-
-        .contact-item {
-            margin-bottom: 3%;
-        }
-
-        .img-event {
-            background-image: url("couple3.jpg");
-            background-size: 100% 100%;
-            height: 400px;
-            background-repeat: no-repeat;
-        }
-
-        #loc,
-        #reg {
-            background-color: rgb(235, 235, 235);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navnav fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Steve And Natasha</a>
+            <a class="navbar-brand" href="#">LORENZTINO & SONIA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon" style="color:white;"><i class="fas fa-bars"></i></span>
             </button>
@@ -200,15 +56,23 @@
             <div class="carousel-item active">
                 <img class="d-block w-100" src="couple.png" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="caption-title" style="font-size: 70pt;">STEVE AND NATASHA</p>
+                    <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
                     <p>Take my hand, take my whole life too</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="couple.png" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
+                    <p>Take my hand, take my whole life too</p>
+                </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="couple.png" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
+                    <p>Take my hand, take my whole life too</p>
+                </div>
             </div>
         </div>
     </div>
@@ -314,10 +178,10 @@
 
     <div class="row" id="reg">
         <div class="container pt-5 pb-5">
-            <h2 class="text-center">Registration Form</h2>
             <div class="row">
                 <div class="col-md-2 col-sm-2 col-xs-2"></div>
-                <div class="col-md-8 col-sm-8 col-xs-8 bg-white p-3">
+                <div class="col-md-8 col-sm-8 col-xs-8 bg-white p-3 form-regis">
+                    <h2 class="text-center">Registration Form</h2>
                     <nav>
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
@@ -401,38 +265,32 @@
     </div>
 
     <div class="row p-5 footer" style="background-color: black; color: white;">
-        <div class="container">
-            <div class="col-md-12">
-                <h3>Contact Us</h3>
-                <div class="row contact-item">
-                    <div class="col-md-1 text-center"><span class="fa fa-map-marker"></span></div>
-                    <div class="col-md-10">High Mountain, California</div>
+        <div class="container-fluid text-center">
+            <h3>Contact Us</h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <span class="fa fa-map-marker"></span> High Mountain, California
                 </div>
-
-                <div class="row contact-item">
-                    <div class="col-md-1 text-center"><span class="fa fa-user"></span></div>
-                    <div class="col-md-10">Ong Hansel Santoso</div>
+                <div class="col-md-3">
+                    <span class="fa fa-user"></span> Ong Hansel Santoso
                 </div>
-
-                <div class="row contact-item">
-                    <div class="col-md-1 text-center"><span class="fa fa-envelope"></span></div>
-                    <div class="col-md-10">johndoe@gmail.com</div>
+                <div class="col-md-3">
+                    <span class="fa fa-envelope"></span> johndoe@gmail.com
                 </div>
-
-                <div class="row contact-item">
-                    <div class="col-md-1 text-center"><span class="fa fa-globe"></span></div>
-                    <div class="col-md-10">www.istts.ac.id</div>
+                <div class="col-md-3">
+                    <span class="fa fa-globe"></span> www.istts.ac.id
                 </div>
-
+            </div>
+            <!-- <div class="row">
                 <p>
                     <a class="social-link" href=""><span class="fab fa-facebook"></span></a>
                     <a class="social-link" href=""><span class="fab fa-instagram"></span></a>
                     <a class="social-link" href=""><span class="fab fa-google-plus-g"></span></a>
                     <a class="social-link" href=""><span class="fab fa-twitter"></span></a>
                 </p>
-            </div>
+            </div> -->
         </div>
-        <div class="container pt-3" style="border-top: 1px solid rgba(255, 255, 255, 0.2)">
+        <div class="container mt-4 pt-3" style="border-top: 1px solid rgba(255, 255, 255, 0.2)">
             <div class="text-center">
                 Copyright &copy;2019. All rights reserved.
             </div>
