--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </nav>
-
+    <!-- TITLE    -->
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -76,66 +76,10 @@
             </div>
         </div>
     </div>
-
-    <div class="container-fluid pl-5 pr-5 pt-5 pb-5" id="loc">
-        <div class="row">
-            <div class="col-md-6 text-center img-event">
-            </div>
-            <div style="font-family:'lato', sans-serif;" class="col-md-6 text-center mb-5">
-                <h1>The Wedding</h1>
-                <h2>Holy Matrimony And Reception</h2>
-                <br>
-                <p>
-                    <strong>Ritz Carlton, Mega Kuningan</strong><br>
-                    <strong>Sunday, 27 January 2020</strong> <br>
-                    14.00 pm - Holy Matrimony <br>
-                    18.00 pm - Reception <br>
-                    <br>
-                    Jl. Ngagel Jaya Tengah 73 - 76, Surabaya
-                </p>
-            </div>
-        </div>
-    </div>
-
+    <!-- Gallery -->
     <div class="container-fluid">
         <div class="row gallery" id="gal">
-            <div class="col-md-6 bg-dark text-white" style="padding: 20px 20px 20px 20px;">
-                <table style="height: 100%;">
-                    <td>
-                        <p style="font-size: 15pt"><i class="fa fa-quote-right"></i>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nobis, officiis
-                            voluptatem
-                            illum iure sint fugit deleniti similique. Maiores ducimus eius vitae magnam voluptatibus
-                            dolorem
-                            aut ipsum quae pariatur quasi? <i class="fa fa-quote-right"></i>
-                        </p>
-                    </td>
-                </table>
-            </div>
-            <div class="col-md-6" style="padding: 0;">
-                <div id="carousel1" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="couple2.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="couple2.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="couple2.jpg" alt="Third slide">
-                        </div>
-                    </div>
 
-                    <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
             <div class="col-md-6" style="padding: 0;">
                 <div id="carousel2" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
@@ -163,19 +107,54 @@
             <div class="col-md-6 bg-dark text-white" style="padding: 20px 20px 20px 20px;">
                 <table style="height: 100%;">
                     <td>
-                        <p style="font-size: 15pt"><i class="fa fa-quote-right"></i>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque nobis, officiis
-                            voluptatem
-                            illum iure sint fugit deleniti similique. Maiores ducimus eius vitae magnam voluptatibus
-                            dolorem
-                            aut ipsum quae pariatur quasi? <i class="fa fa-quote-right"></i>
-                        </p>
+                        <div class="container" style="text-align: center; padding: 15%;">
+                            <h1 style="font-size: 70pt;">#SOinLORve</h1>
+                        </div>
+                        <!-- <p style="font-size: 15pt">
+                            #SOinLORve
+                        </p> -->
                     </td>
                 </table>
             </div>
         </div>
     </div>
+    <!-- Event Detail -->
+    <div class="container-fluid pl-5 pr-5 pt-5 pb-5" id="loc">
+        <div class="row">
+            <div class="col-md-6 text-center img-event">
+            </div>
+            <div style="font-family:'lato', sans-serif; padding-top: 7%;" class="col-md-6 text-center mb-5">
+                <h1>Holy Matrimony</h1>
+                <br>
+                <p>
+                    <strong>GBIS KRISTUS TERANG DUNIA</strong><br>
+                    <strong>Saturday, February 1st 2020</strong> <br>
+                    11.30 am<br>
+                    <br>
+                    Jl. Embong Sawo 32, Surabaya
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid pl-5 pr-5 pt-5 pb-5" id="loc">
+        <div class="row">
+            <div style="font-family:'lato', sans-serif; padding-top: 7%;" class="col-md-6 text-center mb-5">
+                <h1>Wedding Reception</h1>
+                <br>
+                <p>
+                    <strong>Ballroom JW Marriott Hotel</strong><br>
+                    <strong>Saturday, February 1st 2020</strong> <br>
+                    06.00 pm<br>
+                    <br>
+                    Jl. Embong Malang 85-89, Surabaya
+                </p>
+            </div>
+            <div class="col-md-6 text-center img-event">
+            </div>
+        </div>
+    </div>
 
+    <!-- REGIS FORM -->
     <div class="row" id="reg">
         <div class="container pt-5 pb-5">
             <div class="row">
@@ -190,6 +169,7 @@
                                 role="tab" aria-controls="nav-profile" aria-selected="false">Bahasa Indonesia</a>
                         </div>
                     </nav>
+                    <!-- Form Inggris -->
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active pt-3" id="nav-home" role="tabpanel"
                             aria-labelledby="nav-home-tab">
@@ -214,16 +194,25 @@
                                         class="form-control" />
                                 </div>
                                 <div class="form-group">
+                                    <label>List Attending</label>
+                                    <select name="jum" class="form-control">
+                                        <option value="1">Holy Matrimony</option>
+                                        <option value="2">Wedding Dinner</option>
+                                        <option value="3">Both</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
                                     <label>Number of People</label>
                                     <select name="jum" class="form-control">
                                         <option value="1">1</option>
                                         <option value="2">2</option>
                                     </select>
                                 </div>
-                                <button type="submit" value="submit" class="btn btn-success btn-block"><span
-                                        class="fa fa-paper-plane"></span> Submit</button>
+                                <button type="submit" value="submit" class="btn btn-success btn-block"></span>
+                                    Submit</button>
                             </form>
                         </div>
+                        <!-- Form Bahasa -->
                         <div class="tab-pane fade pt-3" id="nav-profile" role="tabpanel"
                             aria-labelledby="nav-profile-tab">
                             <form action="#" role="form" class="w-100">
@@ -247,14 +236,21 @@
                                         class="form-control" />
                                 </div>
                                 <div class="form-group">
-                                    <label>Jumlah Orang</label>
+                                    <label>Daftar Kehadiran</label>
+                                    <select name="jum" class="form-control">
+                                        <option value="1">Pemberkatan Nikah</option>
+                                        <option value="2">Makan Malam Pernikahan</option>
+                                        <option value="3">Keduanya</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label>Jumlah Kehadiran</label>
                                     <select name="jum" class="form-control">
                                         <option value="1">1</option>
                                         <option value="2">2</option>
                                     </select>
                                 </div>
-                                <button type="submit" value="submit" class="btn btn-success btn-block"><span
-                                        class="fa fa-paper-plane"></span> Submit</button>
+                                <button type="submit" value="submit" class="btn btn-success btn-block">Submit</button>
                             </form>
                         </div>
                     </div>
