--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Raleway&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="./assets/fa/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -57,21 +57,21 @@
                 <img class="d-block w-100" src="couple.png" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
-                    <p>Take my hand, take my whole life too</p>
+                    <p>I have found the one whom my soul loves</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="couple.png" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
-                    <p>Take my hand, take my whole life too</p>
+                    <p>I have found the one whom my soul loves</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="couple.png" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
-                    <p>Take my hand, take my whole life too</p>
+                    <p>I have found the one whom my soul loves</p>
                 </div>
             </div>
         </div>
@@ -107,8 +107,10 @@
             <div class="col-md-6 bg-dark text-white" style="padding: 20px 20px 20px 20px;">
                 <table style="height: 100%;">
                     <td>
-                        <div class="container" style="text-align: center; padding: 15%;">
-                            <h1 style="font-size: 70pt;">#SOinLORve</h1>
+                        <div class="container">
+
+                            <p style="font-size: 20pt;">Every love story is beautiful, but ours is my favorite</p>
+                            <h1 style="font-size: 60pt;">#SOinLORve</h1>
                         </div>
                         <!-- <p style="font-size: 15pt">
                             #SOinLORve
@@ -119,48 +121,49 @@
         </div>
     </div>
     <!-- Event Detail -->
-    <div class="container-fluid pl-5 pr-5 pt-5 pb-5" id="loc">
+    <div class="container-fluid" id="loc">
         <div class="row">
             <div class="col-md-6 text-center img-event">
             </div>
-            <div style="font-family:'lato', sans-serif; padding-top: 7%;" class="col-md-6 text-center mb-5">
+            <div style="font-family: 'DM Serif Text', serif; padding-top: 7%;" class="col-md-6 text-center mb-5">
                 <h1>Holy Matrimony</h1>
                 <br>
                 <p>
-                    <strong>GBIS KRISTUS TERANG DUNIA</strong><br>
                     <strong>Saturday, February 1st 2020</strong> <br>
-                    11.30 am<br>
-                    <br>
+                    <b> 11.30 am </b><br>
+                    <strong>GBIS KRISTUS TERANG DUNIA </strong><br>
                     Jl. Embong Sawo 32, Surabaya
+                    <br>
+
                 </p>
             </div>
         </div>
     </div>
-    <div class="container-fluid pl-5 pr-5 pt-5 pb-5" id="loc">
+    <div class="container-fluid" id="loc">
         <div class="row">
             <div style="font-family:'lato', sans-serif; padding-top: 7%;" class="col-md-6 text-center mb-5">
                 <h1>Wedding Reception</h1>
                 <br>
                 <p>
-                    <strong>Ballroom JW Marriott Hotel</strong><br>
                     <strong>Saturday, February 1st 2020</strong> <br>
-                    06.00 pm<br>
-                    <br>
+                    <b> 06.00 pm </b> <br>
+                    <strong>Ballroom JW Marriott Hotel </strong><br>
                     Jl. Embong Malang 85-89, Surabaya
+                    <br>
+
                 </p>
             </div>
             <div class="col-md-6 text-center img-event">
             </div>
         </div>
     </div>
-
     <!-- REGIS FORM -->
     <div class="row" id="reg">
         <div class="container pt-5 pb-5">
             <div class="row">
                 <div class="col-md-2 col-sm-2 col-xs-2"></div>
                 <div class="col-md-8 col-sm-8 col-xs-8 bg-white p-3 form-regis">
-                    <h2 class="text-center">Registration Form</h2>
+                        <h4 style="text-align: center;">We would love to have you on our wedding day. Please RSVP if you are available to witness our special day</h4>
                     <nav>
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
@@ -194,10 +197,10 @@
                                         class="form-control" />
                                 </div>
                                 <div class="form-group">
-                                    <label>List Attending</label>
+                                    <label>Select your attendance</label>
                                     <select name="jum" class="form-control">
                                         <option value="1">Holy Matrimony</option>
-                                        <option value="2">Wedding Dinner</option>
+                                        <option value="2">Wedding Reception</option>
                                         <option value="3">Both</option>
                                     </select>
                                 </div>
@@ -208,7 +211,7 @@
                                         <option value="2">2</option>
                                     </select>
                                 </div>
-                                <button type="submit" value="submit" class="btn btn-success btn-block"></span>
+                                <button type="submit" value="submit" class="btn btn-dark btn-block"></span>
                                     Submit</button>
                             </form>
                         </div>
@@ -239,7 +242,7 @@
                                     <label>Daftar Kehadiran</label>
                                     <select name="jum" class="form-control">
                                         <option value="1">Pemberkatan Nikah</option>
-                                        <option value="2">Makan Malam Pernikahan</option>
+                                        <option value="2">Resepsi Pernikahan</option>
                                         <option value="3">Keduanya</option>
                                     </select>
                                 </div>
@@ -250,7 +253,7 @@
                                         <option value="2">2</option>
                                     </select>
                                 </div>
-                                <button type="submit" value="submit" class="btn btn-success btn-block">Submit</button>
+                                <button type="submit" value="submit" class="btn btn-dark btn-block">Submit</button>
                             </form>
                         </div>
                     </div>
@@ -271,7 +274,7 @@
                     <span class="fa fa-user"></span> Ong Hansel Santoso
                 </div>
                 <div class="col-md-3">
-                    <span class="fa fa-envelope"></span> johndoe@gmail.com
+                    <span class="fa fa-envelope"></span> soinlorve@outlook.com
                 </div>
                 <div class="col-md-3">
                     <span class="fa fa-globe"></span> www.istts.ac.id
