--- a/index2.html
+++ b/index2.html
@@ -56,21 +56,21 @@
             <div class="carousel-item active">
                 <img class="d-block w-100" src="couple.png" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
+                    <p class="caption-title">LORENZTINO & SONIA</p>
                     <p>I have found the one whom my soul loves</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="couple.png" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
+                    <p class="caption-title">LORENZTINO & SONIA</p>
                     <p>I have found the one whom my soul loves</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="couple.png" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="caption-title" style="font-size: 70pt;">LORENZTINO & SONIA</p>
+                    <p class="caption-title">LORENZTINO & SONIA</p>
                     <p>I have found the one whom my soul loves</p>
                 </div>
             </div>
@@ -158,7 +158,7 @@
         </div>
     </div>
     <!-- REGIS FORM -->
-    <div class="row" id="reg">
+    <div class="row bg-white" id="reg">
         <div class="container pt-5 pb-5">
             <div class="row">
                 <div class="col-md-2 col-sm-2 col-xs-2"></div>
