--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navnav fixed-top">
+    <nav class="navbar navnav fixed-top w-100">
         <div class="container">
             <a class="navbar-brand" href="#">LORENZTINO & SONIA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
