--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <nav class="navbar navnav fixed-top w-100">
+    <nav class="navbar navnav navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">LORENZTINO & SONIA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -108,8 +108,8 @@
                     <td>
                         <div class="container">
 
-                            <p style="font-size: 20pt;">Every love story is beautiful, but ours is my favorite</p>
-                            <h1 style="font-size: 60pt;">#SOinLORve</h1>
+                            <p class="quote1" >Every love story is beautiful, but ours is my favorite</p>
+                            <h1 class="quote2" >#SOinLORve</h1>
                         </div>
                         <!-- <p style="font-size: 15pt">
                             #SOinLORve
